crates/config/tests/it/snapshots/t24-asm-flags.snap
---
source: crates/config/tests/it/sites.rs
expression: summary(&c)
---
content:
  drafts: true
  expired: true
  future: true
defaultLanguageInSubdir: false
environment: production
formats:
  - html
  - "404"
  - alias
  - amp
  - calendar
  - css
  - csv
  - gotmpl
  - json
  - markdown
  - robots
  - rss
  - sitemap
  - sitemapindex
  - webappmanifest
minifyOutput: false
multihost: false
security:
  inlineShortcodes: disabled
sites:
  - baseURL: "https://example.org/"
    cascade: 0
    code: en
    disableKinds:
      - taxonomy
    lang: en
    mainSections: ~
    menus: 0
    name: ""
    outputs:
      "404":
        - "404"
      home:
        - html
        - json
      page:
        - html
        - json
      robotstxt:
        - robots
      section:
        - html
      sitemap:
        - sitemap
      sitemapindex:
        - sitemapindex
      term:
        - html
    pagination:
      disableAliases: false
      pagerSize: 10
      path: page
    params: 0
    permalinks:
      page: {}
      section: {}
      taxonomy: {}
      term: {}
    taxonomies:
      - tag=tags
    timeZone: UTC
    title: Asm Flags
    ugly: never
    urlPrefix: ""
    weight: 0
timeout: 60
