crates/config/tests/it/snapshots/t24-content.snap
---
source: crates/config/tests/it/sites.rs
expression: summary(&c)
---
content:
  drafts: false
  expired: false
  future: false
defaultLanguageInSubdir: false
environment: production
formats:
  - html
  - "404"
  - alias
  - amp
  - calendar
  - css
  - csv
  - gotmpl
  - json
  - markdown
  - robots
  - rss
  - sitemap
  - sitemapindex
  - webappmanifest
minifyOutput: false
multihost: false
security:
  inlineShortcodes: enabled
sites:
  - baseURL: "https://example.org/"
    cascade: 0
    code: en
    disableKinds: []
    lang: en
    mainSections: ~
    menus: 0
    name: ""
    outputs:
      "404":
        - "404"
      home:
        - html
        - rss
        - json
      page:
        - html
        - json
      robotstxt:
        - robots
      section:
        - html
        - rss
      sitemap:
        - sitemap
      sitemapindex:
        - sitemapindex
      taxonomy:
        - html
        - rss
      term:
        - html
        - rss
    pagination:
      disableAliases: false
      pagerSize: 10
      path: page
    params: 0
    permalinks:
      page: {}
      section: {}
      taxonomy: {}
      term: {}
    taxonomies:
      - category=categories
      - tag=tags
    timeZone: UTC
    title: Content
    ugly: never
    urlPrefix: ""
    weight: 1
  - baseURL: "https://example.org/"
    cascade: 0
    code: th
    disableKinds: []
    lang: th
    mainSections: ~
    menus: 0
    name: ""
    outputs:
      "404":
        - "404"
      home:
        - html
        - rss
        - json
      page:
        - html
        - json
      robotstxt:
        - robots
      section:
        - html
        - rss
      sitemap:
        - sitemap
      sitemapindex:
        - sitemapindex
      taxonomy:
        - html
        - rss
      term:
        - html
        - rss
    pagination:
      disableAliases: false
      pagerSize: 10
      path: page
    params: 0
    permalinks:
      page: {}
      section: {}
      taxonomy: {}
      term: {}
    taxonomies:
      - category=categories
      - tag=tags
    timeZone: UTC
    title: Content
    ugly: never
    urlPrefix: th
    weight: 2
timeout: 60
